prevent author and date posted from wrapping in table

--- a/tiles/recent-content/tiles/recent-content/public/stylesheets/main.css
+++ b/tiles/recent-content/tiles/recent-content/public/stylesheets/main.css
@@ -156,3 +156,7 @@ input[value="all"] {
 .listItem > a {
   color: #0055b7;
 }
+
+tr > td:nth-last-child(-n+2) {
+  white-space: nowrap;
+}
